# not-quite-cargo

./: .gitignore  README.md  VERSION  cargo_py_in_container.sh  pyproject.toml  unit-graph-plan.md
.github/workflows/: build-binaries.yaml  lint_and_test.yml  lint_and_test_rust.yml  release.yaml
go/: .gitignore  Makefile  build.sh  go.mod  go.sum  makefile  not-quite-cargo  readme.md
go/cargo/: config.go  config_test.go  deepreplace.go  deepreplace_test.go  directives.go  directives_test.go  logger.go  patch.go  patch_test.go  plan.go  plan_test.go  profile.go  profile_test.go  run.go  run_test.go  topo.go  topo_test.go
go/cargo/testdata/: plan.small.json  plan.small.patched.json
go/cargo/unitgraph/: args.go  args_test.go  build.go  build_test.go  env.go  env_test.go  fixture_test.go  hash.go  hash_test.go  lower.go  lower_test.go  manifest.go  manifest_test.go  paths.go  paths_test.go  pkgid.go  pkgid_test.go  triple.go  triple_test.go  unit.go
go/cargo/unitgraph/testdata/fd/: README.md  build-plan.json  capture.sh  cfg.txt  ug.json  unit-graph.json
go/cmd/not-quite-cargo/: main.go  main_test.go
go/driver/: driver.go  driver_test.go
go/examples/coreutils-build-plan/: Dockerfile  README.md  cc-setup.sh  makefile  prove.sh
go/examples/eza-build-plan/: README.md  makefile  prove.sh
go/examples/fd-jemalloc/: Dockerfile  README.md  makefile  prove.sh
go/examples/fd-mold/: README.md  makefile  prove.sh  run.sh
go/examples/fd-musl/: Dockerfile  README.md  makefile  plan.sh  prove.sh
go/examples/fd-no-features/: README.md  makefile  run.sh
go/examples/fd-wild/: README.md  makefile  run.sh
go/examples/not-quite-cargo-cargo/: Dockerfile  README.md  cc-setup.sh  makefile  prove.sh
go/examples/sudo/: Dockerfile  README.md  demo.sh
go/examples/sudo-build-plan/: README.md  makefile  prove.sh
go/examples/sudo-unit-graph/: Dockerfile  README.md  demo.sh  makefile  plan.sh  prove.sh
go/src/cmd/not-quite-cargo/: main.go
py/: cargo_py_in_container.sh  pyproject.toml  tox.ini
py/src/: cargo.py
py/static-py39/: .gitignore  Setup.local  static_py39.md
py/tests/: test_version.py
rust/: Cargo.toml  build.rs  makefile  readme.md
rust/examples/quine/: Dockerfile  README.md  makefile  prove-more.sh  prove.sh
rust/examples/strange-loop/: README.md  makefile  prove.sh
rust/examples/sudo-build-plan/: Dockerfile  README.md  makefile
rust/src/: config.rs  deepreplace.rs  directives.rs  lib.rs  logger.rs  main.rs  patch.rs  plan.rs  profile.rs  run.rs  topo.rs  version.rs
rust/src/testdata/: plan.small.patched.json
src/: cargo.py
tests/: conftest.py  test_imports.py  test_version.py
