[project]
name = "cargo-py"
description = "Add your description here"
version = "0.2.1"
authors = [{ name = "Marcin Konowalczyk", email = "marcin.konowalczyk@canonical.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
home = "https://github.com/lczyk/cargo-py"

# coverage setup
[tool.coverage.run]
omit = ["tests/*", "**/__init__.py"]

# coverage configuration
[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "except ImportError:",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"

namespace_packages = true
disallow_untyped_defs = true
# disallow_any_unimported = true
# disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true
explicit_package_bases = false
enable_error_code = "explicit-override"
extra_checks = true
local_partial_types = true


files = [
    "./src/**/*.py",
    "./tests/**/*.py",
    # "./example/**/*.py",
    #
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".env",
    ".eggs",
    "*.egg",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    "*-env",
]
line-length = 120
lint.ignore = [
    # "SIM105",
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PERF203", # try-except within the loop body
    # "PLR0913", # too many arguments in function definition
    # "PLR2004", # magic values
    "PLC0415", # imports should be at the top-level of the file
    "PLW2901", # `for` loop vriable overritten in loop body
    #
]
lint.select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "W",    # warnings
    "UP",   # pyupgrade
    "I",    # isort
    "Q",    # flake8-quotes
    "RUF",  # ruff
    "TID",  # flake8-tidy-imports
    "PERF", # perflint
    "FURB", # refurb
    "PL",   # pylint
    #
]

output-format = "concise"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-s",
    "--tb=short",
    "--color=yes",
    # "--doctest-modules",
    #
]

[dependency-groups]
dev = [
    "colorlog>=6.9.0",
    "mypy>=1.15.0",
    "packaging>=25.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.pyright]

reportMissingImports = "information"
