[package]
name = "not-quite-cargo"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
lexopt = "0.3"
anyhow = "1"
tinyjson = "2"
version = { git = "https://github.com/lczyk/version", tag = "rust/v0.5.0" }

[build-dependencies]
version = { git = "https://github.com/lczyk/version", tag = "rust/v0.5.0" }
